<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">Unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Disconnect USB storage</string>
    <string name="sdcard_unmount_sd">Unmount SD card</string>
    <string name="sdcard_format">Format USB storage</string>
    <string name="sdcard_format_sd">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="sdcard_setting_sd">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC and USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Visible</string>
    <string name="bluetooth_is_discoverable">Visible for %1$s seconds…</string>
    <string name="bluetooth_is_discoverable_always">Visible</string>
    <string name="bluetooth_not_discoverable">Make device visible</string>
    <string name="bluetooth_visibility_timeout">Visible time-out</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be visible for</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialling</string>
    <string name="bluetooth_lock_voice_dialing_summary">Disable Bluetooth voice dialling when screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Search for devices</string>
    <string name="bluetooth_disconnect_blank">%1$s will be disconnected.</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_device_paired">Paired</string>
    <string name="bluetooth_device">Handsfree/headset</string>
    <string name="progress_scanning">Scanning</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">"Select to pair with "</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_ask_enablement">Application requests to turn on Bluetooth. Continue?</string>
    <string name="bluetooth_ask_discovery">Application requests to make your device visible to other Bluetooth devices for %d seconds. Continue?</string>
    <string name="bluetooth_ask_lasting_discovery">Application on your device is requesting permission to make your device visible to other devices. Allow?</string>
    <string name="bluetooth_ask_enablement_and_discovery">Application requests to turn on Bluetooth and to make your device visible to other devices for %d seconds. Continue?</string>
    <string name="bluetooth_ask_enablement_and_lasting_discovery">Application on your device is requesting permission to turn on Bluetooth and to make your device visible to other devices. Allow?</string>
    <string name="bluetooth_turning_on">Turning on Bluetooth…</string>
    <string name="bluetooth_scan_text">Empty button…</string>
    <string name="bluetooth_settings_text">Empty button…</string>
    <string name="bluetooth_enable_text">Empty button…</string>
    <string name="bluetooth_device_info_connectButton_text">Turn on Bluetooth</string>
    <string name="bluetooth_device_info_deviceInfo_text" />
    <string name="date_and_time">Date and time settings</string>
    <string name="date_time_12_hour_sample">1:00 PM</string>
    <string name="date_time_24_hour_sample">13:00</string>
    <string name="date_time_changeTime_text">Change time</string>
    <string name="date_time_changeDate_text">Date</string>
    <string name="choose_timezone">Select time zone</string>
    <string name="default_date_format">MM/dd/yyyy</string>
    <string name="normal_date_format">Normal (%s)</string>
    <string name="display_preview_label">Preview:</string>
    <string name="display_font_size_label">Font size:</string>
    <string name="intent_sender_data_label">Data:</string>
    <string name="intent_sender_sendbroadcast_text">Send broadcast</string>
    <string name="intent_sender_action_label">Action:</string>
    <string name="intent_sender_startactivity_text">Start activity</string>
    <string name="sound_settings_title">Sound</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="silent_mode_summary">No sounds except media and alarms</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="ringtone_summary" />
    <string name="all_volume_title">Volume</string>
    <string name="ring_volume_summary" />
    <string name="vibrate_title">Vibration</string>
    <string name="vibrate_summary">Vibration for incoming calls and notifications</string>
    <string name="notification_sound_title">Notification ringtone</string>
    <string name="notification_sound_summary">Set your default notification ringtone</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_pulse_summary">Pulse trackball light repeatedly for new notifications</string>
    <string name="notification_sound_dialog_title">Select notification ringtone</string>
    <string name="location_title">My location</string>
    <string name="location_network_based">Use wireless networks</string>
    <string name="location_networks_disabled">See location in applications (such as Maps) using wireless networks</string>
    <string name="location_neighborhood_level">Location determined by WLAN and/or mobile networks</string>
    <string name="location_gps">Use GPS satellites</string>
    <string name="location_street_level">Location accurate to street level</string>
    <string name="location_gps_disabled">Locate to street-level (requires more battery plus view of sky)</string>
    <string name="location_pdr">Use sensor aiding</string>
    <string name="location_use_pdr">Enhance positioning and save power using sensors</string>
    <string name="location_use_pdr_off">Enhance positioning and save power using sensors</string>
    <string name="sound_category_sound_title">General</string>
    <string name="sound_category_calls_title">Incoming calls</string>
    <string name="sound_category_notification_title">Notifications</string>
    <string name="split_view_settings_title">Split view</string>
    <string name="splitview_phone">Phone</string>
    <string name="splitview_message">Message</string>
    <string name="splitview_calendar">Calendar</string>
    <string name="splitview_memo">Memo</string>
    <string name="splitview_music">Music</string>
    <string name="splitview_myfiles">My files</string>
    <string name="splitview_socialhub">Social Hub</string>
    <string name="splitview_im">IM</string>
    <string name="profile_name">Name</string>
    <string name="clock_sync">GPS clock Sync</string>
    <string name="clock_sync_enabled">Sync phone clock with GPS satellites clock</string>
    <string name="clock_sync_disabled">Sync phone clock with GPS satellites clock</string>
    <string name="assisted_gps_function_switch">AGPS function</string>
    <string name="assisted_gps_function_switch_summary">Set AGPS for home and raoming network</string>
    <string name="satellite_view">GPS Satellite view</string>
    <string name="satellite_view_summary">Show GPS satellite information</string>
</resources>