<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/sound_settings_title" android:key="sound_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/sound_category_sound_title" />
    <EditTextPreference android:singleLine="true" android:maxLength="12" android:title="@string/profile_name" android:key="profile_name" android:inputType="textUri" />
    <CheckBoxPreference android:persistent="false" android:title="@string/silent_mode_title" android:key="silent" android:summary="@string/silent_mode_summary" android:disableDependentsState="true" />
    <ListPreference android:entries="@array/vibrate_entries" android:title="@string/vibrate_title" android:key="vibrate" android:summary="@string/vibrate_summary" android:entryValues="@array/vibrate_values" />
    <com.android.settings.PhoneProfileVolumePreference android:persistent="false" android:title="@string/all_volume_title" android:key="ring_volume" android:summary="@string/ring_volume_summary" android:dependency="silent" android:dialogTitle="@string/all_volume_title" android:streamType="ring" />
    <PreferenceScreen android:persistent="false" android:title="@string/all_volume_title" android:key="ring_volume_silent" android:summary="@string/ring_volume_summary" android:dependency="silent" />
    <PreferenceCategory android:title="@string/sound_category_calls_title" />
    <com.android.settings.ProfileDefaultRingtonePreference android:persistent="false" android:title="@string/ringtone_title" android:key="ringtone" android:summary="@string/ringtone_summary" android:dependency="silent" android:dialogTitle="@string/ringtone_title" settings:soundType="ringtone" />
    <PreferenceScreen android:persistent="false" android:title="@string/ringtone_title" android:key="ringtone_silent" android:summary="@string/ringtone_summary" android:dependency="silent" />
    <PreferenceCategory android:title="@string/sound_category_notification_title" />
    <com.android.settings.ProfileDefaultRingtonePreference android:persistent="false" android:title="@string/notification_sound_title" android:key="notification_sound" android:summary="@string/notification_sound_summary" android:dependency="silent" android:dialogTitle="@string/notification_sound_dialog_title" settings:soundType="notification" />
    <PreferenceScreen android:persistent="false" android:title="@string/notification_sound_title" android:key="notification_sound_silent" android:summary="@string/notification_sound_summary" android:dependency="silent" />
    <CheckBoxPreference android:persistent="false" android:title="@string/notification_pulse_title" android:key="notification_pulse" android:summary="@string/notification_pulse_summary" />
</PreferenceScreen>
